          - Eval.ItemPrediction -> ItemRecommendation.Prediction
          - Eval.RatingPredictionEval -> Eval.Ratings
          - Eval.ItemPredictionEval -> Eval.Items
          - IUserAttributeAwareRecommender: remove set from NumUserAttributes
          - IItemAttributeAwareRecommender: remove set from NumItemAttributes
        - recommenders
          - UserAverage, ItemAverage, GlobalAverage: support LoadModel() and
            SaveModel()
          - merge functionality of BiasedMatrixFactorizationMAE into
            BiasedMatrixFactorization
          - RatingPredictor: get rid of InitModel() method
          - SlopeOne: get rid of unnecessary String.Format() call
          - UserItemBaseline: fixed incorrect item ID check
          - simple recommenders: avoid reimplementation of ToString() method
        - command-line tools
          - --find-iter=N: explicitly state that the last number refers to the
            number of iterations computed so far
          - rating prediction:
            - add user-defined prediction format via the --prediction-line
              argument
            - get rid of --min-rating and --max-rating, it is now automatically
              read from the data
          - item prediction:
            - always obey --relevant-users=FILE and --relevant-items=FILE
              arguments
            - improved error messages
        - evaluation
          - add "filtered evaluation" protocol for item recommendation:
            for every user, compute recommendation quality for item sets
            filtered according to given attributes: Eval.ItemsFiltered
        - misc
          - MatrixUtils: rename RowInitNormal(m, d, d) to InitNormal() - "row"
            made no sense here
          - Utils.Recommender: add Load(filename) method that creates a
            recommender object of the appropriate type and loads the model from
            file

1.03	2011-06-22